--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.4.4",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
+    "emailjs": "^4.0.3",
     "exceljs": "^4.2.0",
     "express": "~4.16.1",
     "express-handlebars": "^3.1.0",
